responsive layout bugFix

--- a/src/components/slider.css
+++ b/src/components/slider.css
@@ -55,8 +55,6 @@
 }
 
 .slide-container:first-child {
-	min-width: 80%;
-	max-width: 80%;
 	margin-left: 10%;
 }
 
@@ -105,33 +103,21 @@ h4 {
 
 @media screen and (max-width: 767px) {
 	.slide-container:first-child {
-		min-width: 100%;
-		max-width: 100%;
 		margin-left: 0;
 	}
 
 	.slide-container {
 		min-width: 100%;
 		max-width: 100%;
-		margin: auto;
 	}
 
 	.slide-container p,
 	h4 {
-		margin: auto;
-		text-align: center;
 		width: 90%;
-		margin-top: 0.5rem;
-		padding: 0.5rem;
-		line-height: 1.5;
 	}
 
 	.person-img {
-		margin: 1rem auto;
 		height: 150px;
 		width: 150px;
-		border-radius: 50%;
-		padding: 0.4rem;
-		box-shadow: 5px 10px 15px rgba(0, 0, 0, 0.5);
 	}
 }
